Created submission screen once quiz answers have been answered correctly

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,6 +92,10 @@ button {
     padding-top: 10px;
 }
 
+#submissionMenu {
+    display: none;
+}
+
 button:hover {
     background-color: slategray;
 }
