--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,6 +94,20 @@ button {
 
 #submissionMenu {
     display: none;
+    flex-direction: row;
+    align-items: center;
+    padding: 0 0 15px 0;
+}
+
+#yourInitials {
+    height: 50px;
+    width: 100px;
+    font-size: 2em;
+    padding: 10px;
+    text-align: center;
+}
+
+#submitScore {
 }
 
 button:hover {
