--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,7 +76,6 @@ button {
     height:100vh;
     width: 800px;
     padding: 0px 0px 10% 0px;
-    border: 1px solid blue;
     display: none;
 }
 
@@ -100,7 +99,7 @@ button {
 }
 
 #submissionMenu {
-    display: none;
+    display: flex;
     flex-direction: row;
     align-items: center;
     padding: 0 0 15px 0;
