--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,6 +36,10 @@ a {
     text-decoration: none;
 }
 
+li {
+    list-style: none;
+}
+
 button {
     font-family: sans-serif;
     color: white;
@@ -113,6 +117,11 @@ button {
     text-align: center;
 }
 
+#scoreBoardButton {
+    width:auto;
+    background-color: red;
+}
+
 #scoreBoardPage{
     display: flex;
     flex-direction: column;
@@ -120,6 +129,7 @@ button {
     width: auto;
     align-items: center;
     justify-content: center;
+    display: none;
 }
 
 #returnToIndex {
@@ -161,10 +171,10 @@ button:hover {
     background-color: slategray;
 }
 
-a:hover {
+#scoreBoardButton:hover {
     color: slateblue;
+    cursor: pointer;
 }
-
 
 /* -------------- FOR MOBILE -------------- */
 
