Scores now properly display on the scoreboard from local storage

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -151,6 +151,9 @@ button {
 
 #scoreContainer {
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     margin: 0px;
     padding: 0px;
     width: 400px;
