--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,7 +119,6 @@ button {
 
 #scoreBoardButton {
     width:auto;
-    background-color: red;
 }
 
 #scoreBoardPage{
@@ -132,7 +131,7 @@ button {
     display: none;
 }
 
-#returnToIndex {
+#returnToQuiz {
     padding: 30px 0 30px 0;
 }
 
@@ -178,6 +177,18 @@ button:hover {
     color: slateblue;
     cursor: pointer;
 }
+
+#returnToQuiz:hover {
+    color: slateblue;
+    cursor: pointer;
+}
+
+#clearScores:hover {
+    color: slateblue;
+    cursor: pointer;
+}
+
+
 
 /* -------------- FOR MOBILE -------------- */
 
