--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,6 +51,7 @@ button {
     border-radius: 10px;
 }
 
+/* Sidebar is for timer and scoreboard buttons */
 .sidebar {
     width: 200px;
     text-align: center;
@@ -58,11 +59,13 @@ button {
     margin: 0px 10px 0px 10px;
 }
 
+/* answerbuttons are the correct/false answer buttons during the quiz */
 .answerbutton {
     width: 300px;
     height: 60px;
 }
 
+/* Initial Quiz-Start Screen layout */
 #quizstart {
     display: flex;
     flex-direction: column;
@@ -73,6 +76,7 @@ button {
     padding: 0px 0px 10% 0px;
 }
 
+/* Quiz Question Screen */
 #quizarea {
     display: flex;
     flex-direction: column;
@@ -84,17 +88,20 @@ button {
     display: none;
 }
 
+/* Question asked during quiz */
 #quizstatement {
     font-family: sans-serif;
     line-height: 120%;
     margin: 20px 20px 55px 20px;
 }
 
+/* Answer button container */
 #quizanswers {
     display: flex;
     flex-direction: column;
 }
 
+/* Good or Bad answer message */
 #answer-result {
     text-align: center;
     font-style: italic;
@@ -103,6 +110,7 @@ button {
     padding-top: 10px;
 }
 
+/* Container containing submission form */
 #submissionMenu {
     display: flex;
     flex-direction: row;
@@ -111,6 +119,7 @@ button {
     display: none;
 }
 
+/* Input form */
 #yourInitials {
     height: 50px;
     width: 100px;
@@ -119,10 +128,12 @@ button {
     text-align: center;
 }
 
+/* Click to visit scoreboard */
 #scoreBoardButton {
     width:auto;
 }
 
+/* Scoreboard container */
 #scoreBoardPage{
     display: flex;
     flex-direction: column;
@@ -133,10 +144,12 @@ button {
     display: none;
 }
 
+/* Leave scoreboard page */
 #returnToQuiz {
     padding: 30px 0 30px 0;
 }
 
+/* Scoreboard itself */
 #scoreBoard {
     display: flex;
     flex-direction: column;
@@ -145,11 +158,13 @@ button {
     border: 2px solid slateblue;
 }
 
+/* Title for scoreboard */
 #scoreBoardTitle {
     font-size: 3em;
     text-align: center;
 }
 
+/* ul that contains scoreboarditems */
 #scoreContainer {
     display: flex;
     flex-direction: column;
@@ -160,6 +175,7 @@ button {
     width: 400px;
 }
 
+/* Scoreboard list item */
 .scoreBoardItem {
     font-size: 1.5em;
     font-weight: lighter;
@@ -175,6 +191,7 @@ button:hover {
     background-color: slategray;
 }
 
+/* makes on click function look like a link x3 */
 #scoreBoardButton:hover {
     color: slateblue;
     cursor: pointer;
